# UrFelt

./: .gitattributes  .gitignore  .gitmodules  .lvimrc  .ycm_extra_conf.py  CMakeLists.txt  README.md
.ctags.d/: .options.ctags.swp  options.ctags
.externalToolBuilders/: moonc.launch  moonc.xml  moonscript.launch
include/: AppState.hpp  Application.hpp  Common.hpp  GPUPoly.hpp  Precompiled.h  UrFelt.hpp  UrPoly3D.hpp  UrPolyGrid3D.hpp  UrSurface.hpp  UrSurface3D.hpp
include/Op/: Base.hpp  ExpandByConstant.hpp  ExpandToBox.hpp  ExpandToImage.hpp  ExpandToSphere.hpp  Polygonise.hpp  Serialise.hpp  Stats.hpp  TransformToBox.hpp  TransformToImage.hpp  TransformToSphere.hpp
src/: AppState.cpp  Application.cpp  CMakeLists.txt  FeltCollisionShape.cpp  FeltCollisionShape.hpp  GPUPoly.cpp  Makefile  Stats.cpp  UrFelt.cpp  UrPoly3D.cpp  UrPolyGrid3D.cpp  UrSurface.cpp  UrSurface3D.cpp  UrSurfaceCollisionShape.cpp  UrSurfaceCollisionShape.hpp  btConvexSurfaceCollisionAlgorithm.cpp  btConvexSurfaceCollisionAlgorithm.h  btFeltCollisionConfiguration.cpp  btFeltCollisionConfiguration.hpp  btSurfaceShape.cpp  btSurfaceShape.h  cmake_install.cmake
src/Op/: Base.cpp  ExpandByConstant.cpp  ExpandToBox.cpp  ExpandToImage.cpp  ExpandToSphere.cpp  Polygonise.cpp  Serialise.cpp  TransformToBox.cpp  TransformToImage.cpp  TransformToSphere.cpp
src/bind/: BindApplication.cpp  BindUrFelt.cpp  UrFelt.pkg  tolua++
